--- a/public/styles.css
+++ b/public/styles.css
@@ -157,6 +157,10 @@ overflow: hidden;
 
 }
 
+.cool-list-item.link{
+  text-decoration: none;
+  color: white;
+}
 
 .cool-list-item .column-left
 {
@@ -184,6 +188,13 @@ overflow: hidden;
   background: #0662ac;
 }
 
+.cool-list-item.link .column-left .top-square-column::before
+{
+
+  width: 2px;
+
+}
+
 .cool-list-item .column-left .top-square-column::after
 {
   content: '';
@@ -193,6 +204,13 @@ overflow: hidden;
   width: 100%;
   height: 3px;
   background: #0662ac;
+}
+
+.cool-list-item.link .column-left .top-square-column::after
+{
+
+  height: 2px;
+
 }
 
 .cool-list-item .column-left .square-column
@@ -220,7 +238,15 @@ overflow: hidden;
 
 }
 
+.cool-list-item.link .column-left .square-column::after
+{
 
+
+  height: 2px;
+
+
+
+}
 
 .cool-list-item .column-right
 {
@@ -257,12 +283,20 @@ flex-direction: column;
   background: rgba(215, 22, 50, 1);
 }
 
+.cool-list-item.link .column-right .top-square-column::before
+{
+
+  width: 2px;
+
+}
+
 .cool-list-item .column-right .square-column
 {
 
   width: 1em;
   height: 1em;
   position: relative;
+  overflow: hidden;
 
 }
 
@@ -283,7 +317,17 @@ flex-direction: column;
 }
 
 
+.cool-list-item.link .column-right .square-column::after
+{
 
+
+  height: 2px;
+
+  bottom: -2px;
+
+
+
+}
 
 
 
@@ -298,7 +342,11 @@ flex-direction: column;
   background: rgba(215, 22, 50, 1);
 }
 
+.cool-list-item.link .column-right .top-square-column::after {
 
+  height: 2px;
+
+}
 
 
 
@@ -311,7 +359,10 @@ flex-direction: column;
   padding: 0.5em 0;
 }
 
-
+.cool-list-item.link .column-center
+{
+  padding: 1em 0;
+}
 
 
 
@@ -385,6 +436,29 @@ flex-direction: column;
 
 }
 
+
+.cool-list-item.link .column-center::before
+{
+
+
+  height: 2px;
+ 
+
+}
+
+.cool-list-item.link .column-center::after
+{
+
+
+  height: 2px;
+ 
+
+}
+
+.cool-link-slider
+{
+margin-top: 2em;
+}
 .content-padding {
   padding: 0 20%;
 }
