--- a/public/styles.css
+++ b/public/styles.css
@@ -1869,7 +1869,7 @@ justify-content: center;
 
 .section-five .container-news .main-news-container .news-desctiption-cnt{
   padding: 0 1em;
-  width: 35em;
+  width: 100%;
 }
 
 .section-five .container-news .main-news-container .news-desctiption-cnt .description-text
