--- a/public/styles.css
+++ b/public/styles.css
@@ -1910,6 +1910,14 @@ position: relative;
 /* Extra small devices (phones, 769px and down) */
 @media only screen and (max-width: 769px) {
 
+  .section-one .section-content {
+    content: "";
+    background: rgb(0, 0, 0);
+    background: -moz-linear-gradient( 90deg, rgba(32, 13, 13, 0.75) 52%, rgba(255, 255, 255, 0.6) 194% );
+    background: -webkit-linear-gradient( 90deg, rgba(32, 13, 13, 0.75) 52%, rgba(255, 255, 255, 0.6) 194% );
+    background: linear-gradient( 90deg, rgba(32, 13, 13, 0.75) 52%, rgba(255, 255, 255, 0.6) 194% );
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#ffffff",GradientType=1);
+}
 
   .section-four .section-content .magic-shot-logo {
 
